src/components/square/SquareContent.css
.main-content {
    display: grid;
    grid-template-columns: auto minmax(200px, 1fr);
    margin-bottom: 1em;
}

.square-content {
    display: grid;
    grid-auto-flow: column dense;

    gap: 1px;

    >div {
        width: 100%;
        height: 100%;
        object-fit: cover;
        background-color: black;

        >img {
            height: 100%;
        }
    }

    div:nth-child(1) {
        grid-column: span 12;
        grid-row: span 12;
    }

    div:nth-child(n + 2):nth-child(-n + 5) {
        grid-column: span 6;
        grid-row: span 6;
    }

    div:nth-child(n + 6):nth-child(-n + 14) {
        &:nth-child(3n) {
            grid-row-start: 1;
            grid-row-end: 5;
        }

        &:nth-child(3n + 1) {
            grid-row-start: 5;
            grid-row-end: 9;
        }

        &:nth-child(3n + 2) {
            grid-row-start: 9;
            grid-row-end: 13;
        }

        grid-column: span 4;
    }

    div:nth-child(n + 15) {
        grid-column: span 3;
        grid-row: span 3;
    }
}

@media (prefers-color-scheme: light) {
    .square-content>div {
        background-color: white;
    }
}

